# GitMe

./: .gitignore  CMakeLists.txt  README.md  buildUnixDarwin.sh  buildWin.bat
GitMe/: CMakeLists.txt  commands.cpp  commands.h  macro.cpp  macro.h  main.cpp  main.h
Test/: .gitignore  ExampleNames.GitMe  ExampleNames.txt
